# trasim

./: .env.example  .gitignore  AI_ASSISTANT_INSTRUCTIONS.md  AI_CONTEXT.md  ALL_COMPLETE.md  BUILD_SUMMARY.md  COMPLETED_WORK.md  DOCUMENTATION_INDEX.md  NEXT_STEPS_CHECKLIST.md  QUICK_REFERENCE.md  README.md  README_FOR_AI.md  REVIEW_AND_RECOMMENDATIONS.md  SETUP_COMPLETE.md  START_HERE.md  SUPABASE_SETUP.md  package.json
apps/api/: package.json  tsconfig.json
apps/api/src/: index.ts
apps/indexer/: package.json
apps/indexer/src/: index.ts
apps/web/: next.config.js  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/admin/: page.tsx
apps/web/src/app/market/[id]/: page.tsx
docs/: ADMIN_GOVERNANCE_AND_DASHBOARD.md  STACK_AND_ARCHITECTURE.md  WHITEPAPER.md
supabase/: config.toml
trasim/: Anchor.toml
trasim/programs/factory/: Cargo.toml  keypair.json
trasim/programs/factory/src/: lib.rs
trasim/programs/market/: Cargo.toml  keypair.json
trasim/programs/market/src/: lib.rs
trasim/programs/rewards/: Cargo.toml  keypair.json
trasim/programs/rewards/src/: lib.rs
trasim/tests/: trasim.ts
